Added scrape endpoint to grab titles and published dates
